--- a/recipes/burgers.html
+++ b/recipes/burgers.html
@@ -18,6 +18,11 @@
             <li>4 hamburger buns, split</li>
             <li>Optional: Mayonnaise, sliced American cheese, sliced tomato, dill pickle slices, lettuce, ketchup and yellow mustard</li>
         </ul>
-        
+        <h3>Steps</h3>
+        <ol>
+            <li>Place a 9-in. cast-iron skillet over medium heat. Meanwhile, gently shape beef into 4 balls, shaping just enough to keep together (do not compact). </li>
+            <li>Increase burner temperature to medium-high; add oil. Working in batches, add beef. With a heavy metal spatula, flatten to 1/4- to 1/2-in. thickness; sprinkle each with 1/8 teaspoon salt and pepper. Cook until edges start to brown, about 1-1/2 minutes. Turn burgers and sprinkle with additional 1/8 teaspoon salt and pepper. Cook until well browned and a thermometer reads at least 160°, 1 minute. Repeat with remaining beef.</li>
+            <li>Serve burgers on buns with toppings as desired.</li>
+        </ol>
     </body>
 </html>
