--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvTBgjuGua68uKGt7fXCg5vty0eVV-NY7VzQ&usqp=CAU" alt="delicious food">
         <ul>
             <li><a href="recipes/burgers.html">Burgers</a></li>
             <li><a href="recipes/pasta.html">Pasta</a></li>
             <li><a href="recipes/pizza.html">Pizza</a></li>
         </ul>
+        <a href="#header">Return to top</a>
     </body>
 </html>
